feat(api): implement pagination and sorting for recipes (#4)
This pull request implements pagination and sorting for the `GET /recipes` endpoint to handle large datasets efficiently and provide more control to the client.

The implementation follows a Test-Driven Development (TDD) approach, where tests were added first to define the expected behavior.

### Key Changes

* **Feature Implementation:**
    * The `RecipeController`, `Service`, and `Repository` layers have been updated to use Spring's `Pageable` and `Page` objects.
    * The API now supports `page`, `size`, and `sort` query parameters.
* **Automated Testing:**
    * New Karate test scenarios have been added to verify the pagination logic (e.g., page size) and that sorting works as expected.
* **Documentation & Tooling:**
    * The `README.md` has been updated with a new section explaining how to use the pagination and sorting parameters.
    * The Postman collection has been updated with new requests to reflect this new functionality.